# thirdCourseBackend

./: .flake8  .gitignore  README.md  expression.json  pyproject.toml  request.json  schema.xsd  temp_schema.xsd
src/backend/: entry.py  main.py  main2.py
src/backend/api/: __init__.py
src/backend/api/backgroundTasks/: BackgroundTaskManager.py
src/backend/api/routers/: documentGrammarPipeline.py  schema.py
src/backend/entities/: __init__.py
src/backend/entities/ElementGrammar/: definition.py  interface.py
src/backend/entities/ExpressionNode/: definition.py
src/backend/entities/XSDTypes/: XSDTypes.py
src/backend/models/ElementGrammar/: model.py
src/backend/processes/: __init__.py
src/backend/processes/buildExpression/: generateExpression.py
src/backend/processes/buildSchema/: buildSchema.py
src/backend/processes/getDocumentGrammar/: getDocumentGrammar.py
src/backend/processes/getDocumentGrammar/helpers/: inferXSDType.py
src/backend/processes/mergeSemantics/: mergeSemantics.py  semanticSimilarity.py
src/backend/processes/mergeTypos/: mergeTypos.py  typoOrAbbreviationProbability.py
src/backend/processes/tools/: getDictCluster.py  getReferenceEGNameByOccurencies.py
