[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "neoplasmes",email = "quiqqiqiu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xmlschema (>=3.4.5,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "transformers (>=4.51.2,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standart] (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "websockets (>=15.0.1,<16.0.0)",
    "wsproto (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-quotes = "^3.4.0"
black = "^25.1.0"

[tool.poetry.scripts]
start = "backend.entry:app"

